[gd_scene load_steps=19 format=3 uid="uid://cn55hyfno4n3m"]

[ext_resource type="Texture2D" uid="uid://bhgccmg0othse" path="res://scenes/game_object/player/player.png" id="1_5m5io"]
[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_v5av0"]
[ext_resource type="PackedScene" uid="uid://c00cuoeu0qtix" path="res://scenes/component/velocity_component.tscn" id="2_3y06v"]
[ext_resource type="PackedScene" uid="uid://bei7gnxcaqi1n" path="res://scenes/component/health_component.tscn" id="2_j15i0"]
[ext_resource type="PackedScene" uid="uid://b3u4x5wlmmxsv" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_rwsr0"]
[ext_resource type="PackedScene" uid="uid://bbj6caajgnipg" path="res://scenes/component/random_audio_stream_player_2d_component.tscn" id="5_6nuk7"]
[ext_resource type="AudioStream" uid="uid://bhae4prfcfxm1" path="res://assets/audio/impactMining_000.ogg" id="6_f6bdf"]
[ext_resource type="AudioStream" uid="uid://b07rrwv57r7sg" path="res://assets/audio/impactMining_001.ogg" id="7_bh7o2"]
[ext_resource type="AudioStream" uid="uid://d224tawsury4f" path="res://assets/audio/impactMining_002.ogg" id="8_0bf6k"]
[ext_resource type="AudioStream" uid="uid://bywmy6xsg7lry" path="res://assets/audio/impactMining_003.ogg" id="9_wmmjy"]
[ext_resource type="AudioStream" uid="uid://cyvl4wl316j3p" path="res://assets/audio/impactMining_004.ogg" id="10_j1bhc"]
[ext_resource type="PackedScene" uid="uid://ctufokj1s5p3s" path="res://scenes/component/interaction_component.tscn" id="11_k0g0c"]

[sub_resource type="Animation" id="Animation_gylpt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7ek6n"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-0.261799, 0.0, 0.261799, 0.0, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 1), Vector2(1, 1.1), Vector2(1.2, 1), Vector2(1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sf7dr"]
_data = {
"RESET": SubResource("Animation_gylpt"),
"walk": SubResource("Animation_7ek6n")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4kx2f"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ju5l8"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xsaye"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_v5av0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sf7dr")
}
speed_scale = 1.5

[node name="VelocityComponent" parent="." instance=ExtResource("2_3y06v")]
max_speed = 90
acceleration = 25.0

[node name="HealthComponent" parent="." instance=ExtResource("2_j15i0")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_rwsr0")]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("5_6nuk7")]
streams = Array[AudioStream]([ExtResource("6_f6bdf"), ExtResource("7_bh7o2"), ExtResource("8_0bf6k"), ExtResource("9_wmmjy"), ExtResource("10_j1bhc")])

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_4kx2f")

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_ju5l8")

[node name="InteractionComponent" parent="." instance=ExtResource("11_k0g0c")]
position = Vector2(0, -4)

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_5m5io")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_xsaye")
